[package]
name = "asyou_rust_sdk"
version = "0.5.0"
edition = "2021"

[dependencies]
# 基础依赖
env_logger = "0.9"
log = "0.4"
slab = "0.4"
serde = "1.0.143"
serde_json = "1.0.83"
base64 = "0.13.0"

# 业务处理
tokio = { version = "1.20.1", features = ["full"] }
once_cell = "1.13.0"
chrono = "0.4.19"
thiserror = "1.0.31"
anyhow = "1.0.58"
sqlx = { version = "0.6.0", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
] }
futures = "0.3.13"
tracing-subscriber = "0.3.11"
reqwest = { version = "0.11.11" }
blake3 = "1.3.1"

# 区块链相关
subxt = { version = "0.25.0" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-keyring = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
hex = "0.4.3"
tiny-bip39 = "0.8.2"
xsalsa20poly1305 = "0.9.0"

substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v0.9.36', features = [
    "std",
    "ws-client",
    "staking-xt",
] }


[profile.release]
opt-level = 3
