[package]
name = "wetee_rust_sdk"
version = "0.5.0"
edition = "2021"

[dependencies]
# 基础依赖
env_logger = "0.9"
log = "0.4"
slab = "0.4"
serde = "1.0.159"
serde_json = "1.0.95"
base64 = "0.13.1"
deadpool = "0.9.5"

# 业务处理
tokio = { version = "1.27.0", features = ["full"] }
once_cell = "1.17.1"
chrono = "0.4.24"
thiserror = "1.0.40"
anyhow = "1.0.70"
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
] }
futures = "0.3.28"
tracing-subscriber = "0.3.16"
blake3 = "1.3.3"

# 区块链相关
hex = "0.4.3"
tiny-bip39 = "0.8.2"
xsalsa20poly1305 = "0.9.0"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
substrate-api-client = { git = 'https://github.com/scs/substrate-api-client', branch = 'polkadot-v1.0.0', features = [
    "std",
    # "tungstenite-client",
    # "jsonrpsee-client",
    "staking-xt",
] }
# substrate-api-client = { path = '../substrate-api-client', features = [
#     "std",
#     "ws-client",
#     "staking-xt",
# ] }

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
sp-keyring = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v1.0.0" }
wetee-runtime = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
wetee-assets = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
wetee-org = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
wetee-project = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}
wetee-gov = { git = "https://github.com/WeteeDAO/wetee", "branch" = "main"}

[profile.release]
opt-level = 3
